[project]
name = "accountability-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.120.0",
    "openai>=2.6.1",
    "redis>=7.0.0",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]
